startet writing the final code, works now after talking to Prof Roth

--- a/initial_steps_notebook.ipynb
+++ b/initial_steps_notebook.ipynb
@@ -7,7 +7,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,9 +25,9 @@
     "# want to especially focus on the difference of the relative harmonic oscillator basis vs the relative momentum basis. Especially the problem of \n",
     "# convergence in regards to trunctuation and the grid size will be discussed.\n",
     "\n",
-    "test_data = pd.read_csv(r\"C:\\Users\\Elias Enrique Hamel\\Documents\\TUDarmstadt\\Master\\NuclearStructure\\code_git\\comp_nuclear_structure_physics2025\\Data\\RelativeHarmonicOscillator\\chi2bSMSI5C\\chi2bSMSI5C_srg0000_NMax100_LMax02_hwHO010.meho\\chi2bSMSI5C_srg0000_NMax100_LMax02_hwHO010.meho\", sep = r\"\\s+\", header = None, skiprows = 1)\n",
+    "# test_data = pd.read_csv(r\"C:\\Users\\Elias Enrique Hamel\\Documents\\TUDarmstadt\\Master\\NuclearStructure\\code_git\\comp_nuclear_structure_physics2025\\Data\\RelativeHarmonicOscillator\\chi2bSMSI5C\\chi2bSMSI5C_srg0000_NMax100_LMax02_hwHO010.meho\\chi2bSMSI5C_srg0000_NMax100_LMax02_hwHO010.meho\", sep = r\"\\s+\", header = None, skiprows = 1)\n",
     "# test_data = pd.read_csv(r\"Data\\RelativeHarmonicOscillator\\chi2bM3A\\chi2bM3A_srg0000_NMax100_LMax02_hwHO012.meho\\chi2bM3A_srg0000_NMax100_LMax02_hwHO012.meho\",  sep = r\"\\s+\", header = None, skiprows = 1)\n",
-    "# test_data = pd.read_csv(r\"Data\\RelativeHarmonicOscillator\\kinetic\\trel_NMax100_LMax02_hwHO014.meho\\trel_NMax100_LMax02_hwHO014.meho\", sep = r\"\\s+\", header = None, skiprows = 1)\n",
+    "test_data = pd.read_csv(r\"Data\\RelativeHarmonicOscillator\\kinetic\\trel_NMax100_LMax02_hwHO010.meho\\trel_NMax100_LMax02_hwHO010.meho\", sep = r\"\\s+\", header = None, skiprows = 1)\n",
     "\n",
     "test_data = test_data.rename(columns = {0: \"N\", 1: \"L\", 2: \"N'\", 3:\"L'\", 4:\"S\", 5:\"J\", 6: \"T\", 7:\"MT\", 8:\"E\"})\n",
     "\n",
